# nodejs-rdtsc

./: .babelrc.cjs  .browserslistrc  .eslintignore  .eslintrc  .eslintrc.cjs  .gitignore  .mocharc.cjs  .npmignore  .nycrc.json  .travis.yml  CMakeLists.txt  HISTORY.md  LICENSE  README.md  binding.cc  binding.gyp  index.js  karma.conf.js  nyc.config.mjs  package.json  pnpm-lock.yaml  rollup.config.js  test.js  tsconfig.json
.github/workflows/: test.yml
@types/register/: index.d.ts
docs/: pnpm.md
src/: binding.cc  calcPerformance.test.ts  calcPerformance.ts  calcPerformanceAsync.ts  index.js  index.js.bak2  index.js.v2  index.js.v3  index.js.v4  index.js.v5  index.js.v6  index.js.v7  index.js.v8  index.js.v9  index.test.ts  index.ts  performanceNow.ts  rdtscDefault.ts  rdtscJs.ts  rdtscNative.ts  runInRealtimePriority.ts  runInRealtimePriorityAsync.ts  test.js  types.ts
src/-test/helpers/: objectToString.ts
src/binding/: binding.cc  binding.cjs  binding.d.ts  binding.ts  cycleclock.h  enums.ts  import.cjs  index.ts  internal_macros.h
src/browser/: index.ts  setRdtscDefault.ts
src/common/: index.ts
src/node/: index.test.ts  index.ts  setRdtscDefault.ts
test/: test.js  test.js.v1
